--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "framer-motion": "^11.0.0",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
